# WorldCupAgent

./: .env.example  README.md  locustfile.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  dependencies.py  logging_setup.py  main.py  orchestrator.py
app/api/: tournament.py
app/llm/: __init__.py  client.py
app/models/: __init__.py  request.py  response.py  tournament.py
app/services/: match_schedule.py  tournament.py
app/tools/: odds.py  rag.py  rag_chunks.py  stats.py  suggest.py  teams.py  tournament_db.py
app/utils/: timezone.py
data/: matches.csv  team_overrides.csv  teams.csv  worldcup.db
docs/teams/: algeria.md  argentina.md  australia.md  austria.md  belgium.md  bosnia_and_herzegovina.md  brazil.md  canada.md  cape_verde.md  colombia.md  croatia.md  cura_ao.md  czech_republic.md  dr_congo.md  ecuador.md  egypt.md  england.md  france.md  germany.md  ghana.md  haiti.md  iran.md  iraq.md  ivory_coast.md  japan.md  jordan.md  mexico.md  morocco.md  netherlands.md  new_zealand.md  norway.md  panama.md  paraguay.md  portugal.md  qatar.md  saudi_arabia.md  scotland.md  senegal.md  south_africa.md  south_korea.md  (+8 more)
scripts/: build_team_docs.py  compute_standings.py  etl_worldcup.py  fetch_odds.py  ingest.py  ingest_embeddings.py  inspect_chroma.py  pipeline.py  sync_tournament.py
skills/worldcup-compare/: SKILL.md
tests/: conftest.py  test_match_schedule.py  test_odds.py  test_orchestrator.py  test_rag.py  test_stats.py  test_suggest.py  test_timezone.py  test_tournament_api.py  test_tournament_pipeline.py
